fix(items): align group type filters

--- a/src/pages/ItemGroupInfo/ItemGroupInfo.css
+++ b/src/pages/ItemGroupInfo/ItemGroupInfo.css
@@ -18,8 +18,7 @@
 .ItemGroupInfo .types {
     display: flex;
     margin-top: .5rem;
-    border-radius: 1rem;
-    border: var(--color-text-1) solid 1px;
+    gap: .25rem;
     width: max-content;
     overflow: hidden;
 }
@@ -29,11 +28,18 @@
     color: var(--color-bg);
     background-color: var(--color-text-1);
     font-weight: 700;
+    border-radius: 1rem .25rem .25rem 1rem;
+}
+
+.ItemGroupInfo .type:hover {
+    background-color: var(--color-text);
 }
 
 .ItemGroupInfo .subtype {
     padding: 0 .5rem;
     color: var(--color-text);
+    border: var(--color-text-1) solid 1px;
+    border-radius: .25rem 1rem 1rem .25rem;
 }
 
 .ItemGroupInfo hr {
